# fastapi-tdd-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
project/: .coverage  Dockerfile  Dockerfile.prod  requirements.txt
project/app/: db.py  main.py
project/app/api/: crud.py  summaries.py
project/db/: Dockerfile
project/tests/: conftest.py  test_summaries.py
