[project]
name = "testdrivenfastapidocker"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcin Marciszewski",email = "marciszewski.m@gmail.com"}
]

requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm (>=0.24.0,<0.25.0)",
    "aerich (>=0.8.1,<0.9.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"

